--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/mongoose": "^6.1.2",
-    "@types/dotenv": "^6.1.1",
+    "bcrypt": "^3.0.6",
     "dotenv": "^7.0.0",
     "mongoose": "^5.5.2",
     "reflect-metadata": "^0.1.12",
@@ -33,6 +33,8 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^5.1.0",
+    "@types/bcrypt": "^3.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.3.1",
     "@types/mongoose": "^5.3.26",
