--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@nestjs/common": "^5.4.0",
     "@nestjs/core": "^5.4.0",
     "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/passport": "^6.0.0",
     "bcrypt": "^3.0.6",
     "dotenv": "^7.0.0",
     "mongoose": "^5.5.2",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.2.2",
@@ -39,6 +42,8 @@
     "@types/jest": "^23.3.1",
     "@types/mongoose": "^5.3.26",
     "@types/node": "^10.7.1",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.5",
     "jest": "^23.5.0",
     "nodemon": "^1.18.3",
