logging, fixed mongo not using TEST db

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 PORT=<num>
 MONGO_URI=mongodb://user:pass@host:port/db?authSource=admin
 JWT_SECRET=<str>
+MONGO_URI_TEST=mongodb://user:pass@host:port/db?authSource=admin
