--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
-    "start:dev": "nodemon",
+    "start:dev": "NODE_ENV=dev nodemon",
+    "start:test": "NODE_ENV=test nodemon",
     "start:debug": "nodemon --config nodemon-debug.json",
     "prestart:prod": "rimraf dist && tsc",
     "start:prod": "node dist/main.js",
@@ -20,40 +21,41 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.4.0",
+    "@nestjs/common": "^6.5.3",
+    "@nestjs/core": "^6.5.3",
     "@nestjs/mongoose": "^6.1.2",
-    "@nestjs/passport": "^6.0.0",
+    "@nestjs/passport": "^6.1.0",
+    "@nestjs/platform-express": "^6.5.3",
     "bcrypt": "^3.0.6",
-    "dotenv": "^7.0.0",
+    "dotenv": "^8.0.0",
     "mongoose": "^5.6.7",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
-    "reflect-metadata": "^0.1.12",
-    "rimraf": "^2.6.2",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^2.6.3",
     "rxjs": "^6.5.2",
     "typescript": "^3.5.3"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
+    "@nestjs/testing": "^6.5.3",
     "@types/bcrypt": "^3.0.0",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
-    "@types/jest": "^23.3.1",
+    "@types/jest": "^24.0.15",
     "@types/mongoose": "^5.5.11",
-    "@types/node": "^10.14.13",
+    "@types/node": "^12.6.8",
     "@types/passport": "^1.0.0",
     "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.8",
-    "jest": "^23.5.0",
+    "jest": "^24.8.0",
     "nodemon": "^1.19.1",
     "prettier": "^1.18.2",
-    "supertest": "^3.1.0",
-    "ts-jest": "^23.1.3",
-    "ts-loader": "^4.4.2",
-    "ts-node": "^7.0.1",
-    "tsconfig-paths": "^3.5.0",
-    "tslint": "5.11.0"
+    "supertest": "^4.0.2",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
+    "tsconfig-paths": "^3.8.0",
+    "tslint": "5.18.0"
   },
   "jest": {
     "moduleFileExtensions": [
